# voice-recorder

./: .cursorignore  .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PURGE_COMMAND.md  README.md  configure_local_whisper.py  configure_transcription.py  pyproject.toml  pytest.ini  run_tests.py  sandbox.py  test_ollama_integration.py  txt.txt
.claude/: settings.local.json
.claude/agents/: python-unit-test-generator.md
.github/workflows/: docs-health-check.yml  docs.yml
docs/: CLAUDE.md  ENHANCED_TRANSCRIPTION.md  HOTKEY_TROUBLESHOOTING.md  HOUSEKEEPING_SUMMARY.md  PROPOSED_TRANSCRIPTION_ARCHITECTURE.md  README.md  TRANSCRIPTION_ARCHITECTURE_COMPARISON.md  conf.py  configuration.rst  index.rst  overview.rst  quickstart.rst  validation-report.json
docs/_src_static/: custom.css
docs/api/: domain.html  domain.rst  index.html  services.html
docs/sphinx/: conf.py  installation.rst
docs/sphinx/_build/doctrees/: environment.pickle  index.doctree  quickstart.doctree
docs/sphinx/_build/doctrees/api/: domain.doctree  index.doctree
docs/sphinx/_build/html/: .buildinfo  configuration.html  genindex.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/sphinx/_build/html/.doctrees/: configuration.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree  quickstart.doctree
docs/sphinx/_build/html/.doctrees/api/: index.doctree  services.doctree
docs/sphinx/_build/html/_modules/: index.html
docs/sphinx/_build/html/_modules/voice_recorder/domain/: interfaces.html  models.html
docs/sphinx/_build/html/_modules/voice_recorder/services/: voice_recorder_service.html
docs/sphinx/_build/html/api/: domain.html  index.html  services.html
docs/sphinx/api/: index.rst  services.rst
examples/: README.md  config_beep.json  config_consistent_sounds.ini  config_custom_tone.json  config_distinct_sounds.ini  config_enhanced_transcription.ini  config_enhanced_transcription_prompt.ini  config_high_quality.ini  config_local_whisper.ini  config_local_whisper.json  config_mixed_sounds.ini  config_no_sound.ini  config_no_sound.json  config_no_start_sounds.ini  config_openai_whisper.ini  config_openai_whisper.json  config_quiet.ini  config_quiet_tone.json  custom_transcription.py  sound_configuration_examples.md
scripts/: validate-docs.py
src/voice_recorder/: __init__.py  py.typed
src/voice_recorder/api/: __init__.py  app.py
src/voice_recorder/cli/: __init__.py  commands.py  config.py  config_wizard.py  main.py
src/voice_recorder/domain/: __init__.py  interfaces.py  models.py
src/voice_recorder/gui/: __init__.py  main.py  signals.py
src/voice_recorder/gui/components/: __init__.py  colors.py  icons.py  sidebar.py  stats_card.py  system_tray.py
src/voice_recorder/gui/widgets/: __init__.py  content_area.py  sidebar.py  statistics_section.py  transcriptions_section.py  welcome_header.py
src/voice_recorder/infrastructure/: __init__.py  audio_feedback.py  audio_recorder.py  config_manager.py  hotkey.py  logging_adapter.py  rich_console.py  session_manager.py  text_paster.py
src/voice_recorder/infrastructure/transcription/: __init__.py  factory.py  local_whisper_service.py  mock_service.py  ollama_model_service.py  ollama_whisper_service.py  openai_service.py  openai_whisper_service.py  protocols.py  service.py  simple_factory.py
src/voice_recorder/infrastructure/transcription/base/: __init__.py  base_enhanced_service.py  base_enhancement_service.py  base_transcription_service.py
src/voice_recorder/infrastructure/transcription/providers/: __init__.py  local_transcription.py  no_text_processor.py  ollama_text_processor.py  openai_text_processor.py  openai_transcription.py
src/voice_recorder/infrastructure/transcription/providers/composite/: __init__.py  local_enhanced_service.py  openai_enhanced_service.py
src/voice_recorder/infrastructure/transcription/providers/llm/: __init__.py  ollama_provider.py  openai_gpt_provider.py
src/voice_recorder/infrastructure/transcription/providers/whisper/: __init__.py  local_whisper_provider.py  openai_whisper_provider.py
src/voice_recorder/services/: __init__.py  voice_recorder_service.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_voice_recorder_service.py
tests/unit/: __init__.py  test_app.py  test_cli_main.py  test_config_manager.py  test_hotkey.py  test_session_manager.py  test_text_paster.py  test_transcription.py  test_transcription_factory.py
